--- a/TelecomX_LATAM.ipynb
+++ b/TelecomX_LATAM.ipynb
@@ -1853,11 +1853,11 @@
         "datos_nomalizados.shape"
       ],
       "metadata": {
-        "id": "k2kCwk7MqPrU",
-        "outputId": "a4ad2dfd-7a34-4300-f6f3-b7144c2a3eac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "k2kCwk7MqPrU",
+        "outputId": "a4ad2dfd-7a34-4300-f6f3-b7144c2a3eac"
       },
       "execution_count": 422,
       "outputs": [
@@ -2434,12 +2434,12 @@
         "datos_selec.sample(5)"
       ],
       "metadata": {
-        "id": "Q48O2aKRojCn",
-        "outputId": "305834bd-61b5-499c-95dc-7b1a59fb3638",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 226
-        }
+        },
+        "id": "Q48O2aKRojCn",
+        "outputId": "305834bd-61b5-499c-95dc-7b1a59fb3638"
       },
       "execution_count": 428,
       "outputs": [
@@ -3321,6 +3321,15 @@
       ],
       "metadata": {
         "id": "5FZlTzoTuSYd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### distribución de evación"
+      ],
+      "metadata": {
+        "id": "5FVoBUtZwX56"
       }
     },
     {
